--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "@splidejs/splide": "^3.6.12",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
@@ -33,6 +34,7 @@
     "gulp-dart-sass": "^1.0.2",
     "jquery": "^3.6.0",
     "scrollissimo": "^0.7.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "smoothscroll-polyfill": "^0.4.4"
   }
 }
